# dwmblocks

./: Cargo.toml  README.md
scripts/: battery  cpu  date  hdd  mem  wifi
src/: lib.rs  main.rs
