[package]
name = "dwmblocks"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-only"
description = "Simple and fast modular status bar for dwm written in rust."
authors = ["thatmagicalcat <thatmagicalcat@duck.com"]
repository = "https://github.com/thatmagicalcat/dwmblocks"
readme = "README.md"

[dependencies]
